# ERA

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/era-runs/20260424T023937Z-13b2d808/: centipede_bundle.json  findings.json  hashes.json  review.md  run.json  target_manifest.json  tool_availability.json
artifacts/era-runs/20260424T023937Z-13b2d808/evidence/accuracy/: test_evidence_bundle.json
config/workload_manifests/: forge_command.json
docs/ERA_Plan_Set_MD/: 00-README.md  01-ERA-Executive-Charter.md  02-System-Architecture-Boundaries.md  03-ERA-Lanes-Control-Matrix.md  04-Contracts-Artifacts-and-Evidence-Model.md  05-ERA-01A-Local-Read-Only-Accuracy-Proof.md  06-RTS-and-Differential-ERA-Plan.md  07-ERA-to-Centipede-Integration-Plan.md  08-Self-Healing-Feed-and-Post-Patch-Verification.md  09-Implementation-Roadmap-and-Slices.md  10-Operator-Controls-Risks-and-Governance.md  11-Implementation-Prompt-ERA-01A.md
era_cli/: __main__.py  main.py
era_cli/commands/: __init__.py  report.py  run.py  validate.py
era_core/: artifact_paths.py  command_runner.py  contracts.py  efficiency.py  git_info.py  hash_chain.py  hashing.py  models.py  redundancy.py  review_writer.py  selection.py  tool_detection.py  validation.py
era_integrations/: centipede_export.py
tests/: test_artifact_generation.py  test_centipede_export.py  test_contracts.py  test_efficiency.py  test_git_snapshot.py  test_hash_chain.py  test_redundancy.py  test_selection_artifact.py  test_tool_detection.py  test_validation.py
(+6 files in other folders)
